# TagTrack-AI_v2

./: .gitattributes  README.md  dummy.json
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/: main.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/api/: anpr_v1.py  anpr_v2.py  health.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/core/: config.py  logging.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/repository/: behavioral_analytics_repository.py  database.py  global_track_repository.py  models.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/schemas/: anpr.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/services/: anpr_service.py  behavioral_pattern_service.py  global_tracking_service.py  paddle_ocr_engine.py  spatiotemporal_correlation_service.py  triton_client.py  video_source_processor.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/app/utils/: analytics_utils.py  constants.py  dependencies.py  media_utils.py  ocr_utils.py  output_serializers.py  request_utils.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/benchmark/: API_BENCHMARK_README.md  __init__.py  api_ocr_benchmark.py  api_ocr_benchmark_20260403_152007_strict.json  api_ocr_benchmark_20260403_152007_strict.md  api_ocr_benchmark_20260403_152035_balanced.json  api_ocr_benchmark_20260403_152035_balanced.md  api_ocr_benchmark_20260403_154846_balanced.json  api_ocr_benchmark_20260403_154846_balanced.md  compare_benchmark_json.py
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/data/: fastapi_video_server.py  play_videos.sh
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/docs/: ARCHITECTURE_FLOW.md  BEHAVIORAL_PATTERN_MINING_DESIGN.md  CONVOY_DETECTION_DESIGN.md  DETECTION_FLOW.md  GLOBAL_ID_MATCHING_DESIGN.md  SPATIOTEMPORAL_CORRELATION_DESIGN.md
PLATE_AND_OBJECT_DETECTION/anpr-inference-service/tests/: conftest.py  test_anpr_service.py  test_behavioral_repository.py  test_core_services.py  test_global_tracking_service.py  test_ocr_cleanup_regex.py  test_pipeline.py  test_processing_helpers.py  test_request_utils.py  test_routes_anpr.py  test_routes_anpr_v2.py  test_schemas_anpr_v2.py
PLATE_AND_OBJECT_DETECTION/triton_server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_grpc_test.py  simple_grpc_test_string.py  triton_health_checks.md
PLATE_AND_OBJECT_DETECTION/triton_server/app/: plate_testing_images.py  vechile_testing_images.py  vechile_testing_images_vechile.py  visualize_bboxes.py  xyxrc.txt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/object_detection/: config.pbtxt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/object_detection/1/: model.onnx
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/paddle_ocr_gpu/: config.pbtxt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/paddle_ocr_gpu/1/: model.py  (+1 more)
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/plate_region_detection_rt_detr/: config.pbtxt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/retinaface/: config.pbtxt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/vehicle_detection_rt_detr/: config.pbtxt
triton-server/: README.md  pyproject.toml
triton-server/Notes/: README_TRITON_RTDETR_FIX.md
triton-server/Notes/ultralytics_triton_patch/: RCA_TRITON_GPU_BUG.md  README.md  apply_patch.py  setup_patched_ultralytics.sh
triton-server/app/: test_images.py  test_images.py.bkp  visualize_bboxes.py
triton-server/model_repository/plate_region_detection_rt_detr/: config.pbtxt
triton-server/model_repository/vehicle_detection_rt_detr/: config.pbtxt
triton-server/model_repository/vehicle_detection_rt_detr/1/: model.pt
triton-server/raw_model/: plate_region_detection-RT-DETR_weights_best.pt  vehicle_detection_RT-DETR_best.pt  vehicle_detection_RT-DETR_best.torchscript
triton_client/: .env.example  DUAL_MODEL_DESIGN.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README_NEW.md  docker-compose.yml  local_setup.py  pyproject.toml  requirements.txt
triton_client/app/: main.py
triton_client/app/core/: config.py  logging.py
triton_client/app/schemas/: anpr.py
triton_client/app/services/: anpr_service.py  paddle_ocr_engine.py  triton_client.py
triton_client/tests/: test_anpr_service.py  test_pipeline.py
(+33 files in other folders)
