[project]
name = "triton-inference-server"
version = "0.1.0"
description = "This project start triton inference server."
requires-python = "==3.11"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "tritonclient[grpc]>=2.40.0",
]
[project.scripts]
test-image = "app.test_images:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
