[project]
name = "triton_client_anpr"
version = "0.1.0"
description = "A project for vehicle and number plate recognition using Triton, Supervision, and PaddleOCR."
authors = [{name = "Gemini"}]
requires-python = "==3.11.14"
dependencies = [
    "supervision==0.27.0.post1",
#    "paddleocr==2.10.0",
    #    "paddlepaddle-gpu==2.6.2", ## required for GPU (Nvidia and linux)
#    "paddlepaddle==2.6.2",
    "paddlepaddle==3.3.0",
    "paddleocr==3.4.0",
    "tritonclient[grpc]==2.65.0",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "python-multipart==0.0.22",
    "watchdog==6.0.0",
    "setuptools>=82.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
anpr-api = "app.main:start_server"
anpr-local = "local_setup:main"

[project.optional-dependencies]
dev = [
    "pytest==7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
